Changed company name in signature

--- a/Main.xaml
+++ b/Main.xaml
@@ -202,7 +202,7 @@ Please find below data as requested!&lt;br&gt;&lt;br&gt;
 &lt;b&gt;Thanks &amp; Regards&lt;/b&gt;&lt;br&gt;
 Ashok Karale
 &lt;br&gt;
-Wipro
+XYZ Company
 &lt;/body&gt;
 &lt;/html&gt;</InArgument>
       </Assign.Value>
